# fatelf

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml
docs/: building-vmware-example.txt  documentation.txt  fatelf-specification.txt
include/: fatelf.h
merge/: is32bitelf.c  merge.sh
misc/: grubmenu.txt  iself.c  merge.sh
patches/: binutils.diff  file-magic.diff  gdb.diff  glibc.diff  linux-kernel.diff
test/: hello-dlopen.c  hello-lib.c  hello.c  test.gdb  test.sh
utils/: fatelf-extract.c  fatelf-glue.c  fatelf-info.c  fatelf-remove.c  fatelf-replace.c  fatelf-split.c  fatelf-utils.c  fatelf-utils.h  fatelf-validate.c  fatelf-verify.c
